--- a/docs/modules/trino/pages/usage_guide/catalogs/generic.adoc
+++ b/docs/modules/trino/pages/usage_guide/catalogs/generic.adoc
@@ -1,8 +1,8 @@
 = Generic
 
-As Trino supports a lots of different connectors, we can't possible cover all the available connectors.
-In case the trino-operator does not support a specific connector you can use this connector to pull in any connector Trino supports.
-You are one you own figuring out how to configure and use this connector and we can't possible support all the catalogs available.
+Trino supports lots of different connectors and we cannot cover all the available connectors.
+In case the Trino operator does not support a specific connector you can use this generic connector to utilize any connector Trino supports.
+You are on your own figuring out how to configure and use this connector and we can't possible support all the catalogs available.
 
 With this out of the way, this is how you can e.g. use the https://trino.io/docs/current/connector/postgresql.html[PostgreSQL connector]:
 
@@ -48,7 +48,7 @@ stringData:
 
 == Add contents from Secrets or ConfigMaps
 In some cases you don't want to add sensitive data (such as PostgreSQL credentials) to a `TrinoCatalog`.
-You can than use `valueFromSecret` or `valueFromSecret` to pull in properties securely.
+You can then use `valueFromSecret` or `valueFromSecret` to pull in properties securely.
 An entry must be an valid `SecretKeySelector` or `ConfigMapKeySelector`.
 
 == Add additional contents
