--- a/docs/modules/trino/pages/usage_guide/catalogs/generic.adoc
+++ b/docs/modules/trino/pages/usage_guide/catalogs/generic.adoc
@@ -1,10 +1,9 @@
 = Generic
 
 Trino supports lots of different connectors and we cannot cover all the available connectors.
-In case the Trino operator does not support a specific connector you can use this generic connector to utilize any connector Trino supports.
-You are on your own figuring out how to configure and use this connector and we can't possible support all the catalogs available.
+In case the trino-operator does not support a specific connector you can use this connector to pull in https://trino.io/docs/current/connector.html[any connector Trino supports}.
 
-With this out of the way, this is how you can e.g. use the https://trino.io/docs/current/connector/postgresql.html[PostgreSQL connector]:
+This is how you can e.g. use the https://trino.io/docs/current/connector/postgresql.html[PostgreSQL connector]:
 
 == Example generic catalog properties
 [source,yaml]
