feat: Consolidate authentication  (#434)
# Description

Changed authentication to list of authentication classes.

Multiple authentication providers can be used (file, ldap). Hot reloading works.

test: https://ci.stackable.tech/view/02%20Operator%20Tests%20(custom)/job/trino-operator-it-custom/70/

fixes: https://github.com/stackabletech/trino-operator/issues/401



Co-authored-by: Sebastian Bernauer <sebastian.bernauer@stackable.de>
Co-authored-by: Malte Sander <malte.sander.it@gmail.com>

--- a/docs/modules/trino/pages/usage_guide/security.adoc
+++ b/docs/modules/trino/pages/usage_guide/security.adoc
@@ -6,6 +6,8 @@ This page covers <<Authentication>> and <<Authorization>>.
 
 Trino supports several https://trino.io/docs/current/security/authentication-types.html[authentication types].
 
+Different authentication types can be used simultaneously.
+
 === Password
 
 The Trino operator currently supports the following `PASSWORD` authenticators.
@@ -19,19 +21,33 @@ The https://trino.io/docs/current/security/password-file.html[file based authent
 include::example$usage_guide/trino-file-auth-snippet.yaml[tag=secret]
 ----
 
-This contains username and password pairs as shown in the previous snippet. The username and password combinations are provided in the `stringData` field. The hashes are created using bcrypt with 10 rounds:
+This contains username and password pairs as shown in the previous snippet. The username and password combinations are provided in the `stringData` field.
 
-[source]
+The Secret is referenced in an `AuthenticationClass`.
+
+[source,yaml]
 ----
-htpasswd -nbBC 10 admin admin
+include::example$usage_guide/trino-file-auth-snippet.yaml[tag=authentication_class]
 ----
 
-Then reference the secret in your TrinoCluster definition:
+Then reference the `AuthenticationClass` in your TrinoCluster definition:
 
 [source,yaml]
 ----
 include::example$usage_guide/trino-file-auth-snippet.yaml[tag=trino]
 ----
+
+Multiple authentication classes with different user secrets can be provided.
+
+The operator never reads secrets directly, but mounts them directly into the `Pod`. Volume mount names can not exceed *63* characters due to Kubernetes restrictions.
+
+For uniqueness, the volume mount name is internally build up of the name of the `AuthenticationClass`. This means the `AuthenticationClass` name must not exceed *63* characters.
+
+IMPORTANT: Due to Kubernetes restrictions, the name of the AuthenticationClass must not exceed *63* characters.
+
+Changes to the referenced user `Secret` (e.g. adding or removing a user) are updated in Trino without restarts but after a small delay. This heavily depends on Kubernetes and may take a couple of minutes.
+
+Adding or removing an `AuthenticationClass` will however result in a `Pod` restart.
 
 === LDAP
 
@@ -39,12 +55,12 @@ The Trino operator supports https://trino.io/docs/current/security/ldap.html[LDA
 
 [source,yaml]
 ----
-include::example$usage_guide/trino-ldap-auth-snippet.yaml[tag=authclass]
+include::example$usage_guide/trino-ldap-auth-snippet.yaml[tag=authentication_class]
 ----
 
 NOTE: You can follow the xref:home:tutorials:authentication_with_openldap.adoc[] tutorial to learn how to create an AuthenticationClass for an LDAP server.
 
-With an AuthenticationClass ready, `PASSWORD` authentication using LDAP is done by referincing the LDAP AuthenticationClass: 
+With an AuthenticationClass ready, `PASSWORD` authentication using LDAP is done by referencing the LDAP AuthenticationClass:
 
 [source,yaml]
 ----
@@ -85,8 +101,10 @@ include::example$usage_guide/trino-secure-tls.yaml[]
 
 <1> The name of (and reference to) the `SecretClass`
 <2> The name of (and reference to) the `Secret`
-<3> `TrinoCatalog` reference
-<4> TLS mechanism
+<3> The `AuthenticationClass` for file based user control
+<4> The `Secret` containing user and password combinations in plaintext
+<5> `TrinoCatalog` reference
+<6> TLS mechanism
 
 The CLI now requires that a path to the keystore and a password be provided:
 
@@ -127,7 +145,9 @@ include::example$usage_guide/trino-secure-internal-tls.yaml[]
 
 <1> The name of (and reference to) the `SecretClass`
 <2> The name of (and reference to) the `Secret`
-<3> TLS mechanism
+<3> The `AuthenticationClass` for file based user control
+<4> The `Secret` containing user and password combinations in plaintext
+<5> TLS mechanism
 
 Since Trino has internal and external communications running over a single port, this will enable the HTTPS port but not expose it. Cluster access is only possible via HTTP.
 
