--- a/docs/modules/trino/pages/usage_guide/configuration.adoc
+++ b/docs/modules/trino/pages/usage_guide/configuration.adoc
@@ -104,29 +104,42 @@ By default, in case nothing is configured in the custom resource for a certain r
 
 === Resource Requests
 
-// The "nightly" version is needed because the "include" directive searches for
-// files in the "stable" version by default.
-// TODO: remove the "nightly" version after the next platform release (current: 22.09)
-include::nightly@home:concepts:stackable_resource_requests.adoc[]
+include::home:concepts:stackable_resource_requests.adoc[]
 
-If no resource requests are configured explicitly, the Trino operator uses the following defaults:
+A minimal HA setup consisting of 1 coordinator and 2 worker instances has the following https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/[resource requirements]:
+
+* `3350m` CPU request
+* `11700m` CPU limit
+* `12704m` memory request and limit
+* `3072Mi` persistent storage
+
+Corresponding to the values above, the operator uses the following resource defaults:
 
 [source,yaml]
 ----
-workers:
-  roleGroups:
-    default:
-      config:
-        resources:
-          requests:
-            cpu: 200m
-            memory: 2Gi
-          limits:
-            cpu: "4"
-            memory: 2Gi
-          storage:
-            data:
-              capacity: 2Gi
+spec:
+  coordinators:
+    config:
+      resources:
+        cpu:
+          min: '500m'
+          max: '2000m'
+        memory:
+          limit: '4Gi'
+        storage:
+          data:
+            capacity: '1Gi'
+  workers:
+    config:
+      resources:
+        cpu:
+          min: '1000m'
+          max: '4000m'
+        memory:
+          limit: '4Gi'
+        storage:
+          data:
+            capacity: '1Gi'
 ----
 
 WARNING: The default values are _most likely_ not sufficient to run a proper cluster in production. Please adapt according to your requirements.
