--- a/docs/modules/trino/pages/operations/graceful-shutdown.adoc
+++ b/docs/modules/trino/pages/operations/graceful-shutdown.adoc
@@ -39,7 +39,7 @@ Please keep in mind, that queries taking longer than the graceful shutdown perio
 This can be circumvented by using https://trino.io/docs/current/admin/fault-tolerant-execution.html[Fault-tolerant execution], which support for might be added in the future.
 Until then you have to use configOverrides to enable it.
 
-== Kubernetes cluster Requirements
+== Kubernetes cluster requirements
 Pods need to have the ability to take as long as they need to gracefully shutdown without getting killed.
 
 Imagine the situation that you set the graceful shutdown period to 24 hours (using `spec.clusterConfig.gracefulShutdownSeconds: 86400`).
