--- a/docs/modules/trino/pages/getting_started/installation.adoc
+++ b/docs/modules/trino/pages/getting_started/installation.adoc
@@ -1,20 +1,22 @@
 = Installation
 
-On this page you will install the Stackable Operator for Trino as well as the commons and secret operator which are required by all Stackable Operators.
+On this page you will install the Stackable Operator for Trino as well as the commons and secret operator which are
+required by all Stackable Operators.
 
 == Stackable Operators
 
 There are two ways to install Stackable Operators:
 
-1. Using xref:stackablectl::index.adoc[stackablectl]
-
-2. Using Helm
+. Using xref:management:stackablectl:index.adoc[stackablectl]
+. Using Helm
 
 === stackablectl
 
-The stackablectl command line tool is the recommended way to interact with operators and dependencies. Follow the xref:stackablectl::installation.adoc[installation steps] for your platform if you choose to work with stackablectl.
+The `stackablectl` command line tool is the recommended way to interact with operators and dependencies. Follow the
+xref:management:stackablectl:installation.adoc[installation steps] for your platform if you choose to work with
+`stackablectl`.
 
-After you have installed stackablectl, run the following command to install all operators necessary for Trino:
+After you have installed `stackablectl`, run the following command to install all operators necessary for Trino:
 
 [source,bash]
 ----
@@ -28,7 +30,7 @@ The tool will show
 include::example$getting_started/code/install-operator-output.txt[tag=stackablectl-install-operators-output]
 ----
 
-TIP: Consult the xref:stackablectl::quickstart.adoc[] to learn more about how to use stackablectl.
+TIP: Consult the xref:management:stackablectl:quickstart.adoc[] to learn more about how to use `stackablectl`.
 
 === Helm
 
@@ -46,12 +48,13 @@ Then install the Stackable Operators:
 include::example$getting_started/code/getting_started.sh[tag=helm-install-operators]
 ----
 
-Helm will deploy the operators in a Kubernetes Deployment and apply the CRDs for the Trino service (as well as the CRDs for the required operators). You are now ready to deploy Trino in Kubernetes.
+Helm will deploy the operators in a Kubernetes Deployment and apply the CRDs for the Trino service (as well as the CRDs
+for the required operators). You are now ready to deploy Trino in Kubernetes.
 
 == Optional installation steps
 
-Some Trino connectors like `hive` or `iceberg` work together with the Apache Hive metastore and S3 buckets.
-For these components extra steps are required.
+Some Trino connectors like `hive` or `iceberg` work together with the Apache Hive metastore and S3 buckets. For these
+components extra steps are required.
 
 * a Stackable Hive metastore
 * an accessible S3 bucket
@@ -61,7 +64,8 @@ For these components extra steps are required.
 ** a Stackable xref:secret-operator::index.adoc[Secret Operator] for certificates when deploying for TLS
 ** a Stackable xref:commons-operator::index.adoc[Commons Operator] for certificates when deploying for TLS authentication
 ** (for authorization): a Stackable xref:opa::index.adoc[OPA Operator][OPA-Operator]
-** the https://repo.stackable.tech/#browse/browse:packages:trino-cli%2Ftrino-cli-363-executable.jar[Trino CLI] to test SQL queries
+** the https://repo.stackable.tech/#browse/browse:packages:trino-cli%2Ftrino-cli-363-executable.jar[Trino CLI] to test
+   SQL queries
 
 === S3 bucket
 
@@ -69,14 +73,11 @@ Please refer to the S3 provider.
 
 === Hive operator
 
-Please refer to the xref:hive::index.adoc[Hive Operator] docs.
-
-Both Hive and Trino need the same S3 authentication.
+Please refer to the xref:hive::index.adoc[Hive Operator] docs. Both Hive and Trino need the same S3 authentication.
 
 === OPA operator
 
 Please refer to the xref:opa::index.adoc[OPA Operator] docs.
-
 
 == What's next
 
