--- a/docs/modules/trino/pages/getting_started/installation.adoc
+++ b/docs/modules/trino/pages/getting_started/installation.adoc
@@ -61,9 +61,9 @@ components extra steps are required.
 ** an end-point, and access- and secret-keys
 ** data in the bucket (we use the https://archive.ics.uci.edu/ml/datasets/iris[Iris] dataset here)
 * the following are optional
-** a Stackable xref:secret-operator::index.adoc[Secret Operator] for certificates when deploying for TLS
-** a Stackable xref:commons-operator::index.adoc[Commons Operator] for certificates when deploying for TLS authentication
-** (for authorization): a Stackable xref:opa::index.adoc[OPA Operator][OPA-Operator]
+** a Stackable xref:secret-operator:index.adoc[Secret Operator] for certificates when deploying for TLS
+** a Stackable xref:commons-operator:index.adoc[Commons Operator] for certificates when deploying for TLS authentication
+** (for authorization): a Stackable xref:opa:index.adoc[OPA Operator][OPA-Operator]
 ** the https://repo.stackable.tech/#browse/browse:packages:trino-cli%2Ftrino-cli-363-executable.jar[Trino CLI] to test
    SQL queries
 
@@ -73,11 +73,11 @@ Please refer to the S3 provider.
 
 === Hive operator
 
-Please refer to the xref:hive::index.adoc[Hive Operator] docs. Both Hive and Trino need the same S3 authentication.
+Please refer to the xref:hive:index.adoc[Hive Operator] docs. Both Hive and Trino need the same S3 authentication.
 
 === OPA operator
 
-Please refer to the xref:opa::index.adoc[OPA Operator] docs.
+Please refer to the xref:opa:index.adoc[OPA Operator] docs.
 
 == What's next
 
