--- a/docs/modules/trino/partials/nav.adoc
+++ b/docs/modules/trino/partials/nav.adoc
@@ -3,24 +3,25 @@
 ** xref:trino:getting_started/first_steps.adoc[]
 * xref:trino:configuration.adoc[]
 * xref:trino:concepts.adoc[]
-* xref:trino:usage_guide/index.adoc[]
-** xref:trino:usage_guide/pod_placement.adoc[]
-** xref:trino:usage_guide/cluster_operations.adoc[]
-** xref:trino:usage_guide/connect_to_trino.adoc[]
-** xref:trino:usage_guide/listenerclass.adoc[]
-** xref:trino:usage_guide/configuration.adoc[]
-** xref:trino:usage_guide/s3.adoc[]
-** xref:trino:usage_guide/security.adoc[]
-** xref:trino:usage_guide/monitoring.adoc[]
-** xref:trino:usage_guide/log_aggregation.adoc[]
-** xref:trino:usage_guide/query.adoc[]
-** xref:trino:usage_guide/catalogs/index.adoc[]
-*** xref:trino:usage_guide/catalogs/black-hole.adoc[]
-*** xref:trino:usage_guide/catalogs/generic.adoc[]
-*** xref:trino:usage_guide/catalogs/google-sheets.adoc[]
-*** xref:trino:usage_guide/catalogs/hive.adoc[]
-*** xref:trino:usage_guide/catalogs/iceberg.adoc[]
-*** xref:trino:usage_guide/catalogs/tpcds.adoc[]
-*** xref:trino:usage_guide/catalogs/tpch.adoc[]
-** xref:trino:usage_guide/operations/index.adoc[]
-*** xref:trino:usage_guide/operations/graceful-shutdown.adoc[]
+* xref:trino:usage-guide/index.adoc[]
+** xref:trino:usage-guide/connect_to_trino.adoc[]
+** xref:trino:usage-guide/listenerclass.adoc[]
+** xref:trino:usage-guide/configuration.adoc[]
+** xref:trino:usage-guide/s3.adoc[]
+** xref:trino:usage-guide/security.adoc[]
+** xref:trino:usage-guide/monitoring.adoc[]
+** xref:trino:usage-guide/log_aggregation.adoc[]
+** xref:trino:usage-guide/query.adoc[]
+** xref:trino:usage-guide/catalogs/index.adoc[]
+*** xref:trino:usage-guide/catalogs/black-hole.adoc[]
+*** xref:trino:usage-guide/catalogs/generic.adoc[]
+*** xref:trino:usage-guide/catalogs/google-sheets.adoc[]
+*** xref:trino:usage-guide/catalogs/hive.adoc[]
+*** xref:trino:usage-guide/catalogs/iceberg.adoc[]
+*** xref:trino:usage-guide/catalogs/tpcds.adoc[]
+*** xref:trino:usage-guide/catalogs/tpch.adoc[]
+** xref:trino:usage-guide/operations/index.adoc[]
+*** xref:trino:usage-guide/operations/cluster-operations.adoc[]
+*** xref:trino:usage-guide/operations/pod-placement.adoc[]
+*** xref:trino:usage-guide/operations/pod-disruptions.adoc[]
+*** xref:trino:usage-guide/operations/graceful-shutdown.adoc[]
