--- a/docs/modules/trino/pages/usage-guide/operations/graceful-shutdown.adoc
+++ b/docs/modules/trino/pages/usage-guide/operations/graceful-shutdown.adoc
@@ -104,7 +104,10 @@ Please keep in mind, that queries taking longer than the graceful shutdown perio
 Running into this issue can be circumvented by using https://trino.io/docs/current/admin/fault-tolerant-execution.html[Fault-tolerant execution], which is not supported natively yet.
 Until native support is added, you will have to use `configOverrides` to enable it.
 
-== OPA requirements
+== Authorization requirements
+
+WARNING: When you are not using OPA for authorization, the user `admin` is not allowed to gracefully shut down workers.
+If you need graceful shutdown you need to use OPA or need to make sure `admin` is allowed to gracefully shut down workers (e.g. having you own authorizer or patching Trino).
 
 In case you use OPA to authorize Trino requests, you need to make sure the user `admin` is authorized to trigger a graceful shutdown of the workers.
 You can achieve this e.g. by adding the following rule, which grants `admin` the permissions to do anything - including graceful shutdown.
